objects/Session__c.object
<CustomObject><fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <summaryFilterItems>
            <field>Student_Absence__c.Absent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Absence__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Attendance__c</fullName>
        <formula>Actual__c /  Expected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual students attended divided by number of students expected, or scheduled, to attend</inlineHelpText>
        <label>Attendance %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Completed__c</fullName>
        <formula>IF (  Date_Time__c &gt; NOW(), False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Date_Time__c</fullName>
        <inlineHelpText>Start date and time of session</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Expected__c</fullName>
        <label>Expected</label>
        <summaryForeignKey>Student_Absence__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Module_Ref__c</fullName>
        <formula>Module__r.Module_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Ref</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Narrative__c</fullName>
        <formula>If (  Completed__c = True, ("Attendance = " &amp;  TEXT( ROUND(Attendance__c *100,1)) &amp; "%"), "Not taken place")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Narrative</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Room_Name__c</fullName>
        <label>Room Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Session_Convenor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session Convenor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Sessions</relationshipLabel>
        <relationshipName>My_Sessions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Session_Type__c</fullName>
        <label>X Session Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lectures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutorials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Study or learning entity associated with a Module (instance)</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Session</label><nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Sessions</pluralLabel><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Room_Name__c</columns>
        <columns>Date_Time__c</columns>
        <columns>Actual__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Sessions</label>
    </listViews><recordTypes>
        <fullName>Lecture</fullName>
        <active>true</active>
        <label>Lecture</label>
    </recordTypes><recordTypes>
        <fullName>Practical</fullName>
        <active>true</active>
        <description>For Lab related session</description>
        <label>Practical</label>
    </recordTypes><recordTypes>
        <fullName>Tutorial</fullName>
        <active>true</active>
        <label>Tutorial</label>
    </recordTypes></CustomObject>